--- a/src/TT/app.css
+++ b/src/TT/app.css
@@ -1,3 +1,43 @@
 body{
-    background-color: rgb(210, 231, 250);
+    /* background-color: rgb(210, 231, 250);  */
+}
+navbarSpacer{
+    min-width: 200px;
+}
+.TTicon{
+    width: 10px !important;
+    height: 10px !important;
+    size: 1rem !important;
+}
+div div#mainsplash{
+    margin-top: 10px;
+    background-image: url('../images/TT_splash_blackOverlay.png')!important;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    width: auto;
+    height: 700px;
+   background-color: rgba(127, 255, 212, 0);
+   text-align: center;
+   color:blanchedalmond!important;
+} 
+.mainPage_vert_space{
+    margin-top: 10rem;
+}
+.mainPage_mainHeading{
+    padding-top: 5rem;
+}
+#WWeDoJumbo{
+    background-image: url('../images/WWeDoSplash.png')!important;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: center;
+    width: auto;
+    height: 700px;
+   background-color: rgba(127, 255, 212, 0);
+   text-align: center;
+   color:blanchedalmond!important;
+}
+.OverView_heading{
+    text-align: center;
 }
