--- a/src/TT/app.css
+++ b/src/TT/app.css
@@ -1,5 +1,5 @@
 body{
-    /* background-color: rgb(210, 231, 250);  */
+    background-color: rgb(235, 246, 255)!important; 
     /* 1966b9 */
 }
 navbarSpacer{
