--- a/src/TT/footer/footer.css
+++ b/src/TT/footer/footer.css
@@ -4,4 +4,5 @@
 div.jumbotron.jumbotron-fluid.footerCust{
     margin-bottom: 0px !important;
     padding: 0px !important;
+    height: 3vh !important;
 }
