--- a/src/TT/ContactUs/CU_form/CU_form.css
+++ b/src/TT/ContactUs/CU_form/CU_form.css
@@ -1,5 +1,4 @@
 .CU_form{
-  
     padding: 20px;
     color: antiquewhite;
 }
@@ -20,4 +19,7 @@
     border-top : 0px;
     border-right: 0px;
     border-left: 0px;
+}
+.CU_form_labels{
+    color: #1966b9;
 }
