--- a/src/TT/app.css
+++ b/src/TT/app.css
@@ -33,3 +33,6 @@ div div#mainsplash{
     text-align: center;
     height:100vh;
 }
+.shadownavCust{
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
+}
