--- a/src/TT/footer/footer.css
+++ b/src/TT/footer/footer.css
@@ -20,7 +20,9 @@ div.jumbotron.jumbotron-fluid.footerCust{
 }
 .footerSub{
     font-size: 12px !important;
+    color: rgb(128, 122, 114);
 }
-ul li a.links{
-    
+.links{
+    font-size: 10px !important;
+    color: rgb(102, 98, 92);
 }
