--- a/src/TT/footer/footer.css
+++ b/src/TT/footer/footer.css
@@ -26,3 +26,6 @@ div.jumbotron.jumbotron-fluid.footerCust{
     font-size: 10px !important;
     color: rgb(102, 98, 92);
 }
+.copyrightIcon{
+    font-size: 14px;
+}
